--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Demo App</h1>
-<p>Welcome to the app, sign up today</p>
+<div class="center hero-unit">
+  <h1>Demo App</h1>
+ 
+  <h2>
+    Welcome to the home page of my Demo app! 
+  </h2>
+ 
+  <%= link_to "Help is here!", help_path, class: "btn btn-large btn-primary" %>
+</div>
