final front end changes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,5 +5,5 @@
     Welcome to the home page of my Demo app! 
   </h2>
  
-  <%= link_to "Help is here!", help_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Sign Up Now", "users/new", class: "btn btn-large btn-primary" %>
 </div>
