--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
         <%= link_to "Demo App", root_path, id: "logo" %>
         <nav>
           <ul class="nav pull-right">
-            <li><%= link_to "Home",    root_path %></li>
+            <li><%= link_to "Users",    users_path %></li>
+            <li><%= link_to "Tweets",  "/tweets" %></li>
             <li><%= link_to "Help",    help_path %></li>
           </ul>
         </nav>
@@ -30,7 +31,7 @@
     </small>
     <nav>
       <ul>
-        <li><%= link_to "Contact", 'http://www.twitter.com/joewadcan' %></li>
+        <li><%= link_to "Contact", 'http://www.twitter.com/lmginc' %></li>
         
       </ul>
     </nav>
