changed tweets page

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -14,9 +14,9 @@
   <tbody>
     <% @tweets.each do |tweet| %>
       <tr>
-        <td><%= tweet.status %></td>
+        <td><%= link_to tweet.status, tweet %></td>
         <td><%= User.find(tweet.user_id).name %></td>
-        <td><%= link_to 'Show', tweet %></td>
+        <td></td>
         <td></td>
         <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
